Finishing web-frontend (models for testing created manually)

--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -1,7 +1,9 @@
 {% load bootstrap3 %}
 <!DOCTYPE html>
 <html lang="en">
-{% bootstrap_css %} {% bootstrap_javascript %}
+{% bootstrap_css %} 
+<script src="{% bootstrap_jquery_url %}"></script>
+{% bootstrap_javascript %} 
 <div class="container container-fluid">
 {% block content %}
 {% endblock %}
