--- a/templates/web/form_delete.html
+++ b/templates/web/form_delete.html
@@ -2,7 +2,7 @@
 {% load bootstrap3 %}
 {% block content %}
 <div class="page-header">
-	<h1>Delete form <small>{{ object }}</small></h1>
+	<h1>Delete form</h1>
 </div>
 <div class="row">
 	<form action="{% url 'web_delete' model_name=object.model_name pk=object.pk %}" method="post" class="form">
