--- a/templates/web/user_registration.html
+++ b/templates/web/user_registration.html
@@ -2,18 +2,15 @@
 {% load bootstrap3 %}
 {% block content %}
 <div class="page-header">
-	<h1>Log in</h1>
+	<h1>Registration</h1>
 </div>
 <div class="row">
-	If your don't have an account, <button class="btn"><a href="{% url 'web_user_registration' %}">Register</a></button>
-</div>
-<div class="row">
-	<form action="{% url 'django.contrib.auth.views.login' %}" method="post" class="form">
+	<form action="{% url 'web_user_registration' %}" method="post" class="form">
 	{% csrf_token %} {% bootstrap_form form %} 
 
 	{% buttons %}
 		<button type="submit" class="btn btn-primary">
-		Log in
+		{% bootstrap_icon 'ok' %} Register
 		</button>
 	{% endbuttons %}
 
