Now config can be updated through web interface

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -16,7 +16,7 @@
 <table>
         <caption>Management</caption>
         <tr><td>
-        <a href="{% url 'web_update_and_migrate' %}">Update from config file</a>
+        <a href="{% url 'web_config' %}">Manage config</a>
         </td></tr>
 </table>
 </div>
