--- a/templates/web/config_form.html
+++ b/templates/web/config_form.html
@@ -16,8 +16,8 @@
 
 	</form>
 </div>
-<!-- <div class="row">
-	<a href="{% url 'web_config' operation='make_migration' %}"><button class="btn">Make migration</button></a>
-	<a href="{% url 'web_config' operation='migrate' %}"><button class="btn">Migrate</button></a>
-</div> -->
+<div class="row">
+	<a href="{% url 'web_config' operation='make_migration' %}"><button class="btn">Make and apply migration</button></a>
+	<!-- <a href="{% url 'web_config' operation='migrate' %}"><button class="btn">Migrate</button></a> -->
+</div>
 {% endblock %}
