--- a/templates/web/config_form.html
+++ b/templates/web/config_form.html
@@ -17,7 +17,7 @@
 	</form>
 </div>
 <div class="row">
-	<a href="{% url 'web_config' operation='restart_server' %}"><button class="btn">Restart server</button></a>
+	<!-- <a href="{% url 'web_config' operation='restart_server' %}"><button class="btn">Restart server</button></a> -->
 	<a href="{% url 'web_config' operation='make_migration' %}"><button class="btn">{% bootstrap_icon 'refresh' %} Make and apply migration</button></a>
 	<!-- <a href="{% url 'web_config' operation='migrate' %}"><button class="btn">Migrate</button></a> -->
 </div>
