Added "visible_when" field

--- a/templates/web/form_create.html
+++ b/templates/web/form_create.html
@@ -1,10 +1,16 @@
 {% extends 'web/base.html' %}
 {% load bootstrap3 %}
+{% load jsonify %}
 {% block content %}
 <div class="row">
 	<h1>Fill a form <small>{{ object.verbose_name }}</small></h1>
 </div>
 <div class="row">
+	{% if form.instance.visibility_dependencies %}
+	<script>
+		var visibility_dependencies = {{ form.instance.visibility_dependencies|jsonify }};
+	</script>
+	{% endif %}
 	<form action="{% url 'web_create' model_name=view.kwargs.model_name %}" method="post" enctype="multipart/form-data" class="form">
 	{% csrf_token %} {% bootstrap_form form %} 
 
