--- a/templates/web/form_update.html
+++ b/templates/web/form_update.html
@@ -1,10 +1,16 @@
 {% extends 'web/base.html' %}
 {% load bootstrap3 %}
+{% load jsonify %}
 {% block content %}
 <div class="page-header">
 	<h1>Correct form <small>{{ object.verbose_name }}</small></h1>
 </div>
 <div class="row">
+	{% if form.instance.visibility_dependencies %}
+	<script>
+		var visibility_dependencies = {{ form.instance.visibility_dependencies|jsonify }};
+	</script>
+	{% endif %}
 	<form action="{% url 'web_update' model_name=object.model_name pk=object.pk %}" method="post" enctype="multipart/form-data" class="form">
 	{% csrf_token %} {% bootstrap_form form %} 
 
