--- a/templates/web/form_list.html
+++ b/templates/web/form_list.html
@@ -18,6 +18,7 @@
 	</div>
 </div>
 <div class="row">
+
 	<table class="table table-striped">
 		<thead>
 			<th>Data</th>
@@ -50,5 +51,7 @@
 			{% endfor %}
 		</tbody>
 	</table>
+	{{ map.map }}
+	{{ map.media.js }}
 </div>
 {% endblock %}
