--- a/templates/web/user_registration.html
+++ b/templates/web/user_registration.html
@@ -1,19 +1,23 @@
 {% extends 'web/base.html' %}
 {% load bootstrap3 %}
 {% block content %}
-<div class="page-header">
-	<h1>Registration</h1>
-</div>
 <div class="row">
-	<form action="{% url 'web_user_registration' %}" method="post" class="form">
-	{% csrf_token %} {% bootstrap_form form %} 
+	<div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
+		<form action="{% url 'web_user_registration' %}" method="post" class="form">
+		{% csrf_token %} {% bootstrap_form form %} 
 
-	{% buttons %}
-		<button type="submit" class="btn btn-primary">
-		{% bootstrap_icon 'ok' %} Register
-		</button>
-	{% endbuttons %}
+		{% buttons %}
+			<button type="submit" class="btn btn-primary">
+			{% bootstrap_icon 'ok' %} Register
+			</button>
+		{% endbuttons %}
 
-	</form>
+		</form>
+	</div>
 </div>
+{% endblock %}
+{% block breadcrumbs %}
+	<ol class="breadcrumb">
+		<li>Registration</li>
+	</ol>
 {% endblock %}
