--- a/templates/web/login.html
+++ b/templates/web/login.html
@@ -1,31 +1,242 @@
-{% extends 'web/base.html' %}
-{% load bootstrap3 %}
-{% block content %}
-<!-- <div class="page-header">
-	<h1>Log in</h1>
-</div> -->
-<div class="row">
-	<div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
-		If your don't have an account, <button class="btn"><a href="{% url 'web_user_registration' %}">Register</a></button>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
-		<form action="{% url 'django.contrib.auth.views.login' %}" method="post" class="form">
-		{% csrf_token %} {% bootstrap_form form %}
+<!DOCTYPE html>
+<html lang="en-us">
+	<head>
+		<meta charset="utf-8">
+		<!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
 
-		{% buttons %}
-			<button type="submit" class="btn btn-primary">
-			Log in
-			</button>
-		{% endbuttons %}
+		<title> SmartAdmin </title>
+		<meta name="description" content="">
+		<meta name="author" content="">
 
-		</form>
-	</div>
-</div>
-{% endblock %}
-{% block breadcrumbs %}
-	<ol class="breadcrumb">
-		<li>Log in</li>
-	</ol>
-{% endblock %}
+		<!-- Use the correct meta names below for your web application
+			 Ref: http://davidbcalhoun.com/2010/viewport-metatag 
+			 
+		<meta name="HandheldFriendly" content="True">
+		<meta name="MobileOptimized" content="320">-->
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+		<!-- Basic Styles -->
+		<link rel="stylesheet" type="text/css" media="screen" href="/static/css/bootstrap.min.css">	
+		<link rel="stylesheet" type="text/css" media="screen" href="/static/css/font-awesome.min.css">
+
+		<!-- SmartAdmin Styles : Please note (smartadmin-production.css) was created using LESS variables -->
+		<link rel="stylesheet" type="text/css" media="screen" href="/static/css/smartadmin-production.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="/static/css/smartadmin-skins.css">	
+		
+		<!-- SmartAdmin RTL Support is under construction
+			<link rel="stylesheet" type="text/css" media="screen" href="/static/css/smartadmin-rtl.css"> -->
+		
+		<!-- Demo purpose only: goes with demo.js, you can delete this css when designing your own WebApp -->
+		<link rel="stylesheet" type="text/css" media="screen" href="/static/css/demo.css">
+
+		<!-- FAVICONS -->
+		<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="img/favicon/favicon.ico" type="image/x-icon">
+
+		<!-- GOOGLE FONT -->
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,400,700">
+
+	</head>
+	<body id="login" class="animated fadeInDown">
+		<!-- possible classes: minified, no-right-panel, fixed-ribbon, fixed-header, fixed-width-->
+		<header id="header">
+			<!--<span id="logo"></span>-->
+
+	    <div id="logo-group">
+	        <style>
+	        .logo-img { width: auto !important; height: 30px !important; }
+	        </style>
+	        <span id="logo">
+	            <img alt="logotype" class="logo-img" src="{{ logo.icon_file.url }}">
+	            {% for partner_logo in partners_logos %}
+	                <img alt="logotype" class="logo-img" src="{{ partner_logo.icon_file.url }}">
+	            {% endfor %}
+	        </span> 
+	 
+	    </div>
+
+			<span id="login-header-space"> <span class="hidden-mobile">Need an account?</span> <a href="{% url 'web_user_registration' %}" class="btn btn-danger">Create account</a> </span>
+
+		</header>
+
+		<div id="main" role="main">
+
+			<!-- MAIN CONTENT -->
+			<div id="content" class="container">
+
+				<div class="row">
+					<div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 hidden-xs hidden-sm">
+						<h1 class="txt-color-red login-header-big">SmartAdmin</h1>
+						<div class="hero">
+
+							<div class="pull-left login-desc-box-l">
+								<h4 class="paragraph-header">It's Okay to be Smart. Experience the simplicity of SmartAdmin, everywhere you go!</h4>
+								<div class="login-app-icons">
+									<a href="javascript:void(0);" class="btn btn-danger btn-sm">Frontend Template</a>
+									<a href="javascript:void(0);" class="btn btn-danger btn-sm">Find out more</a>
+								</div>
+							</div>
+							
+							<img src="img/demo/iphoneview.png" class="pull-right display-image" alt="" style="width:210px">
+
+						</div>
+
+						<div class="row">
+							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+								<h5 class="about-heading">About SmartAdmin - Are you up to date?</h5>
+								<p>
+									Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa.
+								</p>
+							</div>
+							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+								<h5 class="about-heading">Not just your average template!</h5>
+								<p>
+									Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi voluptatem accusantium!
+								</p>
+							</div>
+						</div>
+
+					</div>
+					<div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
+						<div class="well no-padding">
+							<form action="{% url 'django.contrib.auth.views.login' %}" method="post" id="login-form" class="smart-form client-form">
+								{% csrf_token %}
+
+								<header>
+									Sign In
+								</header>
+
+								<fieldset>
+									{% for error in form.non_field_errors %}
+										<em for="username" class="invalid">{{ error|escape }}</em>
+									{% endfor %}
+									
+									<section>
+										<label class="label">Login</label>
+										<label class="input {% if form.username.errors %}state-error{% endif %}"> <i class="icon-append fa fa-user"></i>
+											<input type="text" name="username">
+											<b class="tooltip tooltip-top-right"><i class="fa fa-user txt-color-teal"></i> Please enter username</b>
+										</label>
+										{% for error in form.username.errors %}
+										<em for="username" class="invalid">{{ error|escape }}</em>
+										{% endfor %}
+									</section>
+
+									<section>
+										<label class="label">Password</label>
+										<label class="input {% if form.password.errors %}state-error{% endif %}"> <i class="icon-append fa fa-lock"></i>
+											<input type="password" name="password">
+											<b class="tooltip tooltip-top-right"><i class="fa fa-lock txt-color-teal"></i> Enter your password</b> 
+										</label>
+										{% for error in form.password.errors %}
+										<em for="password" class="invalid">{{ error|escape }}</em>
+										{% endfor %}
+<!-- 										<div class="note">
+											<a href="forgotpassword.html">Forgot password?</a>
+										</div> -->
+									</section>
+
+								</fieldset>
+								<footer>
+									<button type="submit" class="btn btn-primary">
+										Sign in
+									</button>
+								</footer>
+							</form>
+
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+		<!--================================================== -->	
+
+		<!-- JS TOUCH : include this plugin for mobile drag / drop touch events 		
+		<script src="/static/js/plugin/jquery-touch/jquery.ui.touch-punch.min.js"></script> -->
+
+		<!-- BOOTSTRAP JS -->		
+		<script src="/static/js/bootstrap/bootstrap.min.js"></script>
+
+		<!-- CUSTOM NOTIFICATION -->
+		<script src="/static/js/notification/SmartNotification.min.js"></script>
+
+		<!-- JARVIS WIDGETS -->
+		<script src="/static/js/smartwidgets/jarvis.widget.min.js"></script>
+		
+		<!-- EASY PIE CHARTS -->
+		<script src="/static/js/plugin/easy-pie-chart/jquery.easy-pie-chart.min.js"></script>
+		
+		<!-- SPARKLINES -->
+		<script src="/static/js/plugin/sparkline/jquery.sparkline.min.js"></script>
+		
+		<!-- JQUERY VALIDATE -->
+		<script src="/static/js/plugin/jquery-validate/jquery.validate.min.js"></script>
+		
+		<!-- JQUERY MASKED INPUT -->
+		<script src="/static/js/plugin/masked-input/jquery.maskedinput.min.js"></script>
+		
+		<!-- JQUERY SELECT2 INPUT -->
+		<script src="/static/js/plugin/select2/select2.min.js"></script>
+
+		<!-- JQUERY UI + Bootstrap Slider -->
+		<script src="/static/js/plugin/bootstrap-slider/bootstrap-slider.min.js"></script>
+		
+		<!-- browser msie issue fix -->
+		<script src="/static/js/plugin/msie-fix/jquery.mb.browser.min.js"></script>
+		
+		<!-- FastClick: For mobile devices -->
+		<script src="/static/js/plugin/fastclick/fastclick.js"></script>
+		
+		<!--[if IE 7]>
+			
+			<h1>Your browser is out of date, please update your browser by going to www.microsoft.com/download</h1>
+			
+		<![endif]-->
+
+		<!-- MAIN APP JS FILE -->
+		<script src="/static/js/app.js"></script>
+
+		<script type="text/javascript">
+			runAllForms();
+
+			$(function() {
+				// Validation
+				$("#login-form").validate({
+					// Rules for form validation
+					rules : {
+						email : {
+							required : true,
+							email : true
+						},
+						password : {
+							required : true,
+							minlength : 3,
+							maxlength : 20
+						}
+					},
+
+					// Messages for form validation
+					messages : {
+						email : {
+							required : 'Please enter your email address',
+							email : 'Please enter a VALID email address'
+						},
+						password : {
+							required : 'Please enter your password'
+						}
+					},
+
+					// Do not change code below
+					errorPlacement : function(error, element) {
+						error.insertAfter(element.parent());
+					}
+				});
+			});
+		</script>
+
+	</body>
+</html>
