Markers now have popups

--- a/templates/web/map_view.html
+++ b/templates/web/map_view.html
@@ -9,6 +9,12 @@
 
 <div class="row">
 	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+		<script type="text/javascript">
+		    window.myobj = {
+		        markerOver: function() { this.openInfoWindow(); },
+		        markerOut: function() { this.closeInfoWindow(); }
+		    };
+		</script>
 		{{ map.map }}
 		{{ map.media.js }}
 	</div>
