Autocomplete added to /web/

--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -165,6 +165,7 @@
                 document.write('<script src="js/libs/jquery-2.0.2.min.js"><\/script>');
             }
         </script>
+        {% include 'autocomplete_light/static.html' %}
 
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
         <script>
