Workaround for autocomplete

--- a/templates/web/form_update.html
+++ b/templates/web/form_update.html
@@ -23,6 +23,8 @@
 
 					<fieldset>
 						<legend>{{ object.verbose_name }}</legend>
+						{{ form.errors }}
+
 						{% bootstrap_form form label_class="col-md-3" field_class="col-md-9" %}
 					</fieldset>
 
