--- a/templates/web/form_list.html
+++ b/templates/web/form_list.html
@@ -44,8 +44,13 @@
 		</table>
 	</div>
 </div>
+{% if is_paginated %}
 <div class="row">
+	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+	{% bootstrap_pagination page_obj %}
+	</div>
 </div>
+{% endif %}
 {% endblock %}
 {% block breadcrumbs %}
 	<ol class="breadcrumb">
