--- a/templates/web/login.html
+++ b/templates/web/login.html
@@ -43,20 +43,27 @@
 		<header id="header">
 			<!--<span id="logo"></span>-->
 
-	    <div id="logo-group">
+	    <!-- <div id="logo-group"> -->
 	        <style>
-	        .logo-img { width: auto !important; height: 30px !important; }
+	        .logo-img { width: auto !important; height: 50px !important; }
+	        #header { height: 90px !important; }
+	        #logo { width: auto !important; }
+	        .partner-logos { margin-left: 30px !important; }
 	        </style>
 	        <span id="logo">
 	            <img alt="logotype" class="logo-img" src="{{ logo.icon_file.url }}">
-	            {% for partner_logo in partners_logos %}
-	                <img alt="logotype" class="logo-img" src="{{ partner_logo.icon_file.url }}">
-	            {% endfor %}
 	        </span> 
+            <span id="logo" class="partner-logos">
+            {% for partner_logo in partners_logos %}
+                <img alt="logotype" class="logo-img" src="{{ partner_logo.icon_file.url }}">
+            {% endfor %}
+	        </span>
 	 
-	    </div>
+	    <!-- </div> -->
 
-			<span id="login-header-space"> <span class="hidden-mobile">Need an account?</span> <a href="{% url 'web_user_registration' %}" class="btn btn-danger">Create account</a> </span>
+			<span id="login-header-space"> 
+				<span class="hidden-mobile">Need an account?</span> <a href="{% url 'web_user_registration' %}" class="btn btn-danger">Create account</a> 
+			</span>
 
 		</header>
 
