Swapped the logos

--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -87,8 +87,8 @@
             </div><!-- end logout button -->
         </div><!-- end pulled right: nav area -->
         <span id="logo" class="pull-right partner-logos">
-            {% for partner_logo in partners_logos %}
-                <img alt="logotype" class="logo-img" src="{{ partner_logo.icon_file.url }}">
+            {% for other_logo in other_logos %}
+                <img alt="logotype" class="logo-img" src="{{ other_logo.icon_file.url }}">
             {% endfor %}
         </span>
  
