--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -148,9 +148,11 @@
                         <li id="{{ form_name }}" {% if form.instance.model_name == form_name %}class="active"{% endif %}>
                             <a href="{% url 'web_create' model_name=form_name %}"><i class="fa fa-lg fa-fw fa-plus"></i> {{ form_model.verbose_name }}</a>
                         </li>
+                        {% if form_model.is_editable %}
                         <li id="{{ form_name }}_edit" {% if model_name_model.model_name == form_name %}class="active"{% endif %}>
                             <a href="{% url 'web_list' model_name=form_name %}"><i class="fa fa-lg fa-fw fa-edit"></i> Edit {{ form_model.verbose_name }}</a>
                         </li>
+                        {% endif %}
                         {% endfor %}
                     {% endblock %}
                 </ul>
