--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -144,15 +144,22 @@
                         <li id="index" {% if request.path == '/web/map/' %}class="active"{% endif %}>
                            <a href="{% url 'web_map' %}"><i class="fa fa-lg fa-fw fa-home"></i> Map</a>                            
                         </li>
-                        {% for form_name, form_model in form_models %}
-                        <li id="{{ form_name }}" {% if form.instance.model_name == form_name %}class="active"{% endif %}>
-                            <a href="{% url 'web_create' model_name=form_name %}"><i class="fa fa-lg fa-fw fa-plus"></i> {{ form_model.verbose_name }}</a>
+                        {% for category, models in form_models %}
+                        <li>
+                            <a href="#"><!-- <i class="fa fa-lg fa-fw fa-plus"></i> --> {{ category|capfirst }}</a>
+                            <ul>
+                                {% for form_name, form_model in models %}
+                                <li id="{{ form_name }}" {% if form.instance.model_name == form_name %}class="active"{% endif %}>
+                                    <a href="{% url 'web_create' model_name=form_name %}"><i class="fa fa-lg fa-fw fa-plus"></i> {{ form_model.verbose_name }}</a>
+                                </li>
+                                {% if form_model.is_editable %}
+                                <li id="{{ form_name }}_edit" {% if model_name_model.model_name == form_name %}class="active"{% endif %}>
+                                    <a href="{% url 'web_list' model_name=form_name %}"><i class="fa fa-lg fa-fw fa-edit"></i> Edit {{ form_model.verbose_name }}</a>
+                                </li>
+                                {% endif %}
+                                {% endfor %}
+                            </ul>
                         </li>
-                        {% if form_model.is_editable %}
-                        <li id="{{ form_name }}_edit" {% if model_name_model.model_name == form_name %}class="active"{% endif %}>
-                            <a href="{% url 'web_list' model_name=form_name %}"><i class="fa fa-lg fa-fw fa-edit"></i> Edit {{ form_model.verbose_name }}</a>
-                        </li>
-                        {% endif %}
                         {% endfor %}
                     {% endblock %}
                 </ul>
