--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -144,18 +144,18 @@
                         <li id="index" {% if request.path == '/web/map/' %}class="active"{% endif %}>
                            <a href="{% url 'web_map' %}"><i class="fa fa-lg fa-fw fa-home"></i> Map</a>                            
                         </li>
-                        {% regroup form_models by category as categories_list %}
+                        {% regroup form_models by 1.category as categories_list %}
                         {% for category in categories_list %}
                         <li>
                             <a href="#"><!-- <i class="fa fa-lg fa-fw fa-plus"></i> --> {{ category.grouper|capfirst }}</a>
                             <ul>
-                                {% for form_model in category.list %}
-                                <li id="{{ form_model.model_name }}" {% if form.instance.model_name == form_model.model_name %}class="active"{% endif %}>
-                                    <a href="{% url 'web_create' model_name=form_model.model_name %}"><i class="fa fa-lg fa-fw fa-plus"></i> {{ form_model.verbose_name }}</a>
+                                {% for form_name, form_model in category.list %}
+                                <li id="{{ form_name }}" {% if form.instance.model_name == form_name %}class="active"{% endif %}>
+                                    <a href="{% url 'web_create' model_name=form_name %}"><i class="fa fa-lg fa-fw fa-plus"></i> {{ form_model.verbose_name }}</a>
                                 </li>
                                 {% if form_model.is_editable %}
-                                <li id="{{ form_model.model_name }}_edit" {% if model_name_model.model_name == form_model.model_name %}class="active"{% endif %}>
-                                    <a href="{% url 'web_list' model_name=form_model.model_name %}"><i class="fa fa-lg fa-fw fa-edit"></i> Edit {{ form_model.verbose_name }}</a>
+                                <li id="{{ form_name }}_edit" {% if object_list_model.model_name == form_name %}class="active"{% endif %}>
+                                    <a href="{% url 'web_list' model_name=form_name %}"><i class="fa fa-lg fa-fw fa-edit"></i> Edit {{ form_model.verbose_name }}</a>
                                 </li>
                                 {% endif %}
                                 {% endfor %}
