--- a/templates/web/form_update.html
+++ b/templates/web/form_update.html
@@ -3,6 +3,8 @@
 {% load custom_tags %}
 {% block content %}
 
+
+<form action="{% url 'web_update' model_name=object.model_name pk=object.pk %}" method="post" enctype="multipart/form-data">
 <div class="row">
 	<div class="col-sm-12 col-md-12 col-lg-6">
 		<div class="jarviswidget">
@@ -15,25 +17,12 @@
 					{% if form.instance.visibility_dependencies %}
 						{% visibility_dependencies_js form.instance.visibility_dependencies %}
 					{% endif %}
-
-					<form action="{% url 'web_update' model_name=object.model_name pk=object.pk %}" method="post" enctype="multipart/form-data">
 					{% csrf_token %} 
 
 					<fieldset class="form-horizontal">
 						<legend>{{ object.verbose_name }}</legend>
 						{% bootstrap_form form label_class="col-md-3" field_class="col-md-9" %}
 
-					</fieldset>
-					<fieldset class="form-inline">
-						{{ inlinetest.management_form }}
-						{% for inline_form in inlinetest %}			
-							<div class="row">
-								<div class="col-sm-12">
-								{% bootstrap_form inline_form layout="inline" %}
-								</div>
-							</div>
-						{% endfor %}
-						<!-- TODO: django-dynamic-formset -->
 					</fieldset>
 
 					<div class="form-actions">
@@ -46,12 +35,39 @@
 						</div>
 					</div>
 
-					</form>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
+{% for inline in inlines %}
+<div class="row">
+	<div class="col-sm-12 col-md-12 col-lg-12">
+		<div class="jarviswidget">
+			<header>
+				<span class="widget-icon"> <i class="fa fa-edit"></i> </span>
+				<h2>{{ inline.instance.verbose_name }}</h2>
+			</header>
+			<div class="widget-body">
+					<fieldset class="form-inline">
+						{{ inline.management_form }}
+						{% for inline_form in inline %}		
+							{% if not forloop.first %}<hr>{% endif %}	
+							<div class="row">
+								<div class="col-sm-12">
+								{% bootstrap_form inline_form layout="inline" %}
+								</div>
+							</div>
+						{% endfor %}
+						<!-- TODO: django-dynamic-formset -->
+					</fieldset>
+			
+			</div>
+		</div>
+	</div>
+</div>
+{% endfor %}
+</form>
 {% endblock %}
 {% block breadcrumbs %}
 	<ol class="breadcrumb">
