Incorporated django-dynamic-formset

--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -57,6 +57,8 @@
                 document.write('<script src="js/libs/jquery-2.0.2.min.js"><\/script>');
             }
         </script>
+    {% block extrahead %}
+    {% endblock %}
 </head>
  
 <body class="">
