--- a/templates/web/form_update.html
+++ b/templates/web/form_update.html
@@ -62,7 +62,7 @@
 		<div class="jarviswidget">
 			<header>
 				<span class="widget-icon"> <i class="fa fa-edit"></i> </span>
-				<h2>{{ inline.instance.verbose_name }}</h2>
+				<h2>{{ inline.0.instance.verbose_name }}</h2>
 			</header>
 			<div class="widget-body">
 					<fieldset class="form-inline">
